--- a/src/index.html
+++ b/src/index.html
@@ -6,18 +6,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+  <div id="radio">
+    <form id="slider">
+      <input type="radio" name="radioBtn" id="repeatRadioBtn">
+      <label for="repeatRadioBtn">Constant</label>
+      <input type="radio" name="radioBtn" id="variedRadioBtn">
+      <label for="variedRadioBtn">Varied</label>
+    </form>
+  </div>
   <div id="form">
-    <form>
+    <form id="textinput">
       <label for="repetitions">Repetitions(count)</label>
       <br>
       <input type="number" id="repetitions" name="repetitions" value = "1"> <br><br>
       <label for="duration">Durations(ms): </label>
       <br>
       <input type="number" id="duration" name="duration" value = "1"> <br><br>
-      <input type="submit" id="submit" value="Submit">
     </form>
   </div>
-  <button id="start">START</button>
+  <div id="buttons">
+    <button id="submit">SUBMIT</button>
+    <button id="start">START</button>
+  </div>
   <script src="main.js"></script>
 </body>
 </html>
