Timers all work correctly, the state changes correctly, the mode changes correctly. Just need to style the app and we're done.

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <input type="number" id="duration" name="duration" value = "1000"> <br><br>
     </form>
   </div>
-  <div id="varied" style="display: inline;">
+  <div id="varied" style="display: none;">
     <form id="textinput">
       <label for="pattern">Give pattern in milliseconds separated by commas e.g. 200, 300, 100, 400, 1000</label>
       <br>
